# trendy_trip

./: README.md  package-lock.json  package.json
BE/TripScheduler/: check_env.py  main.py  pyproject.toml
BE/TripScheduler/tests/data/: directions_raw_data.json  results.json  test.py  time_matrix.json
BE/TripScheduler/tests/path/: test_path.py  test_raw_path.py  trip_map.html
BE/TripScheduler/tests/scenarios/base/: tc10_too_many_places.json  tc5_too_many_restaurants.json  tc6_no_restaurant.json  tc7_no_places.json  tc8_no_accommodation.json
BE/TripScheduler/tests/scenarios/error/: tc9_no_match_meal_time.json
BE/TripScheduler/tests/unit/api/: create_matrices.py  directions_raw_data.json  path_matrix.json  prepare_matrices.py  tc.json  time_matrix.json
BE/TripScheduler/tests/utils/: factory.py  run_all_test_cases_in.py
BE/TripScheduler/tripscheduler/: scheduler.py  scheduler_api.py
BE/TripScheduler/tripscheduler.egg-info/: PKG-INFO  SOURCES.txt
BE/TripScheduler/tripscheduler/api/: directions.py  mock.py  prepare.py  snap.py
BE/TripScheduler/tripscheduler/cli/: controller.py  utils.py
BE/TripScheduler/tripscheduler/core/indexing/: category.py  handlers.py
BE/TripScheduler/tripscheduler/core/preprocessing/: restaurant.py  timewindow.py
BE/TripScheduler/tripscheduler/core/routing/: builder.py  components.py  context.py  dummy.py  parser.py  (+2 more)
BE/TripScheduler/tripscheduler/models/: place.py
BE/TripScheduler/tripscheduler/types/: __init__.py  base.py  place.py  routing.py
BE/TripScheduler/tripscheduler/utils/: format.py  time.py  window_utils.py
(+82 files in other folders)
